--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-/Packages/
+MapboxSDKTest/Packages/
 
 # JetBrains Rider config
-./idea/
+MapboxSDKTest/.idea/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
