--- a/MapboxSDKTest/.gitignore
+++ b/MapboxSDKTest/.gitignore
@@ -71,3 +71,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+# Ignore the Packages directory
+/[Pp]ackages
+# Firebase generated files
+/[Aa]ssets/Firebase/*
